--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@ clear some questions in the field of personal information management
 (PIM), information re-finding, and information architecture. This
 repository holds relevant data to verify or extend this experiment.
 
-For this purpose, the testing framework tagstore (http://tagstore.org)
+For this purpose, the testing framework tagstore ([[http://tagstore.org]])
 was used to *compare* storing files (images, graphics and documents)
 within the *folder hierarchy* using Microsoft Windows Explorer *and
 tagstore*.
@@ -39,7 +39,7 @@ things such as evaluation scripts are in *English* though.
 
 * White Papers
 
-Several related white papers are linked [[http://tagstore.ist.tugraz.at/en/papers][on the tagstore homepage]].
+Several related white papers are linked [[http://tagstore.org/en/papers.shtml][on the tagstore homepage]].
 
 * License
 
